# MachineLearning

./: CMakeLists.txt  Common_Data.cpp  Common_Data.h  Data.cpp  Data.h  DataHandler.cpp  DataHandler.h  HiddenLayer.cpp  HiddenLayer.h  InputLayer.cpp  InputLayer.h  KMean.cpp  KMean.h  KNN.cpp  KNN.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  OutputLayer.cpp  OutputLayer.h  main.cpp
